--- a/KosaESS/src/main/resources/static/css/student/notice_list.css
+++ b/KosaESS/src/main/resources/static/css/student/notice_list.css
@@ -93,15 +93,17 @@ input::placeholder {
 	background: #0E5881;
 	color: white;
 	padding: 9px 2%;
+	margin-left: 2%;
 }
 
 .searchform {
 	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .searchInput {
 	width: 50%;
-	margin-left: 20%;
 }
 
 .paging {
@@ -119,7 +121,7 @@ input::placeholder {
 }
 
 .pages span {
-	margin: 5px 10px; 
+	margin: 5px 10px;
 	font-size: 22px;
 	border: black;
 	padding: 5px 12px;
