--- a/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-----------------------------------------------------------------------
 .home-section {
 	position: relative;
 	background: #fff;
@@ -21,7 +20,7 @@
 }
 
 .home-section .content_wrap {
-	margin: 0px 0px 0px 40px;
+	margin: 0 auto;
 	width: 95%;
 }
 
@@ -73,16 +72,25 @@
 	text-align: center;
 }
 
+#wlog_list_table{
+	width: 100%;
+}
+
 #wlog_list_table td{
 	text-align: center;
 	padding: 0 5px;
 }
 
-.wlog_list_tbody_row .resn_icon {
+/* .wlog_list_tbody_row .file_cell .resn_icon { */
+/* 	width: 15px; */
+/* 	height: 15px; */
+/* } */
+.resn_icon {
 	width: 15px;
-	height: 100%;
+	height: 15px;
 }
-.wlog_list_tbody_row .resn_icon:hover {
+
+.resn_icon:hover {
 	cursor: pointer;
 }
 
@@ -92,27 +100,4 @@
 
 select option[value=""][disabled] {
 	display: none;
-}
-
-.look_at_me{
-	display : none;
-	font-size: 1em;
-	font-weight:bold;
-	z-index:10;
-	position: fixed;
-	background-color: #F9DCCB;
-	border : 1px solid #FF333E;
-	color : #FF333E;
-	border-radius: 0.2em;
-	left: 80%;
-	height: 6%;
-	width: 20%;
-	align-items: center;
-    justify-content: center;
-}
-
-.look_at_me .read_this{
-/* 	position : absolute; */
-/* 	top : 50%; */
-/* 	left : 50%; */
 }
