[#add][eunji]교육생 관리 선택삭제 및 검색기능 구현

--- a/KosaESS/src/main/resources/templates/admin/inquiry_form.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_form.html
@@ -54,9 +54,10 @@
 				<tr>
 					<th>내용</th>
 					<td>
+					<pre>
 						<div class="scroll"
 							style="width: 100%; height: 200px; overflow: scroll;"
-							th:if="${act=='select'}" th:utext="${postVO.postContent}"></div>
+							th:if="${act=='select'}" th:utext="${postVO.postContent}"></div></pre>
 					</td>
 				</tr>
 				<tr>
