--- a/KosaESS/src/main/resources/static/css/admin/student_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/student_list.css
@@ -168,3 +168,7 @@
 .student_check, .student_num, .student_name, .student_gender, .student_birthday, .student_tel, .student_job, .student_status{
 	text-align: center;
 }
+
+.student_list_cnt {
+	color: #0E5881;
+}
