--- a/KosaESS/src/main/resources/static/css/manager/manager_student_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_student_list.css
@@ -6,6 +6,15 @@ select option[value=""][disabled] {
 	display: none;
 }
 
+button:hover{
+	cursor: pointer;
+}
+
+/*
+input[type="checkbox"]:hover{
+	cursor:pointer;
+}
+*/
 
 /*-------------------------------------------------------*/
 
