--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -23,12 +23,19 @@
 		<!-- title -->
 		<div class="title_wrap">
 			<span class="title" th:text="${title}"></span>
-			<input id="class_id_save" type="text">
-			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
-			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
+			<br>
+			<input id="class_id_save" type="text" style="display: none;">
+			<input id="start_date_save" type="text" style="display: none;" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}">
+			<input id="end_date_save" type="text" style="display: none;" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}">
+			<input id="keyword_save" type="text" style="display: none;">
+			<div style="display: none;">
+				<input th:each="cmptCN:${cmptCodeNameList}" class="cmpt_checkbox_save" th:name="${cmptCN.cmcdId}" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}">
+			</div>
 <!-- 			<input id="class_id_save" type="text" style="display: none;"> -->
 <!-- 			<input id="start_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssStartDd:null}" style="display: none;"> -->
 <!-- 			<input id="end_date_save" type="text" th:value="${thisClass.clssId!=null?thisClass.clssEndDd:null}" style="display: none;"> -->
+<!-- 			<input id="keyword_save" type="text" style="display: none;"> -->
+<!-- 			<input id="cmpt_save" type="text" style="display: none;"> -->
 		</div>
 		<!-- content wrap-->
 		<div class="content_wrap">
@@ -40,12 +47,12 @@
 							<td class="search_filter_name">교육과정명</td>
 							<td style="width: 30%;"><select id="classId">
 									<option value="" disabled selected>교육과정명을 선택하세요</option>
-									<option th:each="class:${classList}" th:text="${class.clssNm}"
-										th:value="${class}" />
+									<option th:each="class:${classList}" th:text="${class.clssNm}" th:value="${class}" />
 							</select></td>
 							<td class="search_filter_name">검색 기간</td>
 							<td style="width: 30%;">
 								<input type="date" id="startDate" min="1980-01-01"> <span> ~ </span> <input type="date" id="endDate" min="1980-01-01">
+								<br>
 								<span>이번 달</span>
 								<input type="radio" name="default_period" id="this_month" value="thisMonth">
 								<span>이번 주</span>
@@ -56,26 +63,27 @@
 						</tr>
 						<tr>
 							<td class="search_filter_name">검색어</td>
-							<td style="width: 30%;"><input type="text"
-								class="input_keyword" placeholder="이메일 또는 이름"></td>
+							<td style="width: 30%;">
+								<input type="text" class="input_keyword" placeholder="이메일 또는 이름">
+							</td>
 							<td class="search_filter_name">이수 상태</td>
-							<td style="width: 30%;"><span class="chk_all_span"> <label
-									th:text="전체" class="chk_all_label"></label> <input
-									type="checkbox" checked="checked" id="chk_all_cmpt">
-							</span> <span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
-									<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label> <input
-									class="cmpt_checkbox" type="checkbox" checked="checked"
-									th:value="${cmptCN.cmcdId}">
-							</span></td>
+							<td style="width: 30%;">
+								<span class="chk_all_span">
+									<label th:text="전체" class="chk_all_label"></label>
+									<input type="checkbox" checked="checked" id="chk_all_cmpt">
+								</span>
+								<span class="chk_all_span" th:each="cmptCN:${cmptCodeNameList}">
+									<label class="cmpt_name" th:text="${cmptCN.cmcdNm}"></label> 
+									<input class="cmpt_checkbox" type="checkbox" checked="checked" th:value="${cmptCN.cmcdId}">
+								</span>
+							</td>
 						</tr>
 					</table>
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="search_filter_btn_wrap">
-					<button class="search_reset_btn" th:id="resetButton"
-						onclick="reset()">초기화</button>
-					<button class="search_filter_btn" th:id="searchButton"
-						onclick="search()">검색</button>
+					<button class="search_reset_btn" th:id="resetButton" onclick="reset()">초기화</button>
+					<button class="search_filter_btn" th:id="searchButton" onclick="search()">검색</button>
 				</div>
 				<!-- End : 검색 버튼 -->
 			</div>
@@ -113,19 +121,17 @@
 				</thead>
 				<tbody id="stdt_list_table_tbody" class="stdt_list_table_tbody">
 					<tr th:each="stdt:${stdtList}" class="stdt_list_table_row">
-						<td class="fixed_length_cell"><input type="checkbox"
-							name="checkedStdt" th:value="${stdt.stdtId}"></td>
+						<td class="fixed_length_cell"><input type="checkbox" name="checkedStdt" th:value="${stdt.stdtId}"></td>
 						<td class="fixed_length_cell" th:text="${stdtStat.count}"></td>
 						<td class="fixed_length_cell" th:text="${stdt.stdtNm}"></td>
 						<td th:text="${stdt.userEmail}">이메일</td>
 						<td class="fixed_length_cell" th:text="${stdt.stdtTel}">연락처</td>
 						<td class="fixed_length_cell" th:text="${stdt.genderCd}">성별</td>
 						<td class="fixed_length_cell" th:text="${stdt.birthDd}">생년월일</td>
-						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}"
-							th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
-						<td class="number_cell"
-							th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
+						<td class="number_cell" th:each="wlogCodeName:${wlogCodeNameList}" th:text="${#strings.substring(#strings.setSplit(stdt.wlogCnt,',')[wlogCodeNameStat.count-1],10,)}">?</td>
+						<td class="number_cell" th:text="${#numbers.formatDecimal(stdt.cmptRate, 1, 1)}"></td>
 						<td class="fixed_length_cell" th:text="${stdt.jobCd}">이수여부</td>
+<!-- 						<td class="number_cell" th:text="${stdt.wlogCnt}">?</td> -->
 					</tr>
 				</tbody>
 			</table>
