[seungwoo][#update]modal 구현 중

--- a/KosaESS/src/main/resources/static/css/manager/modal_style.css
+++ b/KosaESS/src/main/resources/static/css/manager/modal_style.css
@@ -3,7 +3,8 @@
 .resn_modal_wrap{
 	width : 100%;
 	z-index: 20;
-	display: flex;
+	display : none;
+/* 	display: flex; */
 /* 	position : fixed; */
 	justify-content: center;
 	align-items: center;
