--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -139,23 +139,22 @@
 <!-- 사유서 조회 모달 -->
 <div class="resn_modal_wrap">
 	<div class="resn_modal">
-	
 		<div class="wlog_info">
 			<table>
 				<tr>
-					<th>이름</th>
+					<th id="modal_name">이름</th>
 						<td>이름</td>
-					<th>이메일</th>
+					<th id="modal_email">이메일</th>
 						<td>이메일</td>
-					<th>사유서 처리 상태</th>
+					<th id="modal_resn_cd">사유서 처리 상태</th>
 						<td>사유서 처리 상태</td>
 				</tr>
 				<tr>
-					<th>출근</th>
+					<th id="modal_in_time">출근</th>
 						<td>출근</td>
-					<th>퇴근</th>
+					<th id="modal_out_time">퇴근</th>
 						<td>퇴근</td>
-					<th>출석 상태</th>
+					<th id="modal_wlog_cd">출석 상태</th>
 						<td>출석 상태</td>
 				</tr>
 			</table>
